; ModuleID = '/home/carl/AnghaBench/wcdb/repair/extr_sqliterk_btree.c_sqliterkBtreeSetMeta.c'
source_filename = "/home/carl/AnghaBench/wcdb/repair/extr_sqliterk_btree.c_sqliterkBtreeSetMeta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32* }

@SQLITERK_MISUSE = common dso_local global i32 0, align 4
@SQLITERK_NOMEM = common dso_local global i32 0, align 4
@sqliterk_btree_type_system_begin = common dso_local global i64 0, align 8
@sqliterk_btree_type_system_end = common dso_local global i64 0, align 8
@sqliterk_btree_type_unknown = common dso_local global i64 0, align 8
@SQLITERK_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqliterkBtreeSetMeta(%struct.TYPE_3__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %12 = icmp ne %struct.TYPE_3__* %11, null
  br i1 %12, label %15, label %13

13:                                               ; preds = %3
  %14 = load i32, i32* @SQLITERK_MISUSE, align 4
  store i32 %14, i32* %4, align 4
  br label %97

15:                                               ; preds = %3
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load i32*, i32** %17, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %27

20:                                               ; preds = %15
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 1
  %23 = load i32*, i32** %22, align 8
  %24 = call i32 @sqliterkOSFree(i32* %23)
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 1
  store i32* null, i32** %26, align 8
  br label %27

27:                                               ; preds = %20, %15
  %28 = load i8*, i8** %6, align 8
  %29 = icmp ne i8* %28, null
  br i1 %29, label %30, label %78

30:                                               ; preds = %27
  %31 = load i8*, i8** %6, align 8
  %32 = call i64 @strlen(i8* %31)
  store i64 %32, i64* %8, align 8
  %33 = load i64, i64* %8, align 8
  %34 = add i64 %33, 1
  %35 = mul i64 1, %34
  %36 = trunc i64 %35 to i32
  %37 = call i32* @sqliterkOSMalloc(i32 %36)
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 1
  store i32* %37, i32** %39, align 8
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 1
  %42 = load i32*, i32** %41, align 8
  %43 = icmp ne i32* %42, null
  br i1 %43, label %46, label %44

44:                                               ; preds = %30
  %45 = load i32, i32* @SQLITERK_NOMEM, align 4
  store i32 %45, i32* %4, align 4
  br label %97

46:                                               ; preds = %30
  %47 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %48 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %47, i32 0, i32 1
  %49 = load i32*, i32** %48, align 8
  %50 = load i8*, i8** %6, align 8
  %51 = load i64, i64* %8, align 8
  %52 = call i32 @strncpy(i32* %49, i8* %50, i64 %51)
  %53 = load i64, i64* @sqliterk_btree_type_system_begin, align 8
  store i64 %53, i64* %9, align 8
  br label %54

54:                                               ; preds = %74, %46
  %55 = load i64, i64* %9, align 8
  %56 = load i64, i64* @sqliterk_btree_type_system_end, align 8
  %57 = icmp slt i64 %55, %56
  br i1 %57, label %58, label %77

58:                                               ; preds = %54
  %59 = load i64, i64* %9, align 8
  %60 = call i8* @sqliterkBtreeGetTypeName(i64 %59)
  store i8* %60, i8** %10, align 8
  %61 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %62 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %61, i32 0, i32 1
  %63 = load i32*, i32** %62, align 8
  %64 = load i8*, i8** %10, align 8
  %65 = load i8*, i8** %10, align 8
  %66 = call i64 @strlen(i8* %65)
  %67 = call i64 @strncmp(i32* %63, i8* %64, i64 %66)
  %68 = icmp eq i64 %67, 0
  br i1 %68, label %69, label %73

69:                                               ; preds = %58
  %70 = load i64, i64* %9, align 8
  %71 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %72 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %71, i32 0, i32 0
  store i64 %70, i64* %72, align 8
  br label %77

73:                                               ; preds = %58
  br label %74

74:                                               ; preds = %73
  %75 = load i64, i64* %9, align 8
  %76 = add nsw i64 %75, 1
  store i64 %76, i64* %9, align 8
  br label %54

77:                                               ; preds = %69, %54
  br label %81

78:                                               ; preds = %27
  %79 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %80 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %79, i32 0, i32 1
  store i32* null, i32** %80, align 8
  br label %81

81:                                               ; preds = %78, %77
  %82 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %83 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %82, i32 0, i32 0
  %84 = load i64, i64* %83, align 8
  %85 = call i32 @sqliterkBtreeIsSystemType(i64 %84)
  %86 = icmp ne i32 %85, 0
  br i1 %86, label %95, label %87

87:                                               ; preds = %81
  %88 = load i64, i64* %7, align 8
  %89 = load i64, i64* @sqliterk_btree_type_unknown, align 8
  %90 = icmp ne i64 %88, %89
  br i1 %90, label %91, label %95

91:                                               ; preds = %87
  %92 = load i64, i64* %7, align 8
  %93 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %94 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %93, i32 0, i32 0
  store i64 %92, i64* %94, align 8
  br label %95

95:                                               ; preds = %91, %87, %81
  %96 = load i32, i32* @SQLITERK_OK, align 4
  store i32 %96, i32* %4, align 4
  br label %97

97:                                               ; preds = %95, %44, %13
  %98 = load i32, i32* %4, align 4
  ret i32 %98
}

declare dso_local i32 @sqliterkOSFree(i32*) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32* @sqliterkOSMalloc(i32) #1

declare dso_local i32 @strncpy(i32*, i8*, i64) #1

declare dso_local i8* @sqliterkBtreeGetTypeName(i64) #1

declare dso_local i64 @strncmp(i32*, i8*, i64) #1

declare dso_local i32 @sqliterkBtreeIsSystemType(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
